# deep_learning

./: README.md  bert.py  first_nn.py  requirements.txt  yolo.py
booking-platform/: .env.sample  .flake8.cfg  .gitignore  .isort.cfg  .venv  Aptfile  cypress.json  gunicorn_config.py  gunicorn_config_heroku.py  jest.config.js  lint-staged.config.js  pyproject.toml
booking-platform/app/: .eslintignore  .eslintrc.js  .gitlab-ci.yml  .prettierignore  .safety-policy.yml  Procfile  README.md  mprocs.sample.yaml  odbcinst.ini  package.json  prettier.config.js  requirements.txt
booking-platform/app/assets/: djrad-admin.b14c23fcf437.js  djrad-admin.js  djrad-app.js  djrad-driver.9329859c8de1.js  djrad-driver.js  staticfiles.json
booking-platform/app/config/: robots.txt
booking-platform/app/doc/: checklist.md
booking-platform/app/frontend/: webpack.dev.config.js  webpack.generic.config.js  webpack.project.config.js
booking-platform/app/requirements/: base.txt  dev.txt  prod.txt  requirements.txt
booking-platform/config/: nginx.conf.erb
booking-platform/django-root/csv_permissions/: permissions.py  tests.py
booking-platform/django-root/django_cypress/: connection.py
booking-platform/django-root/django_site/: __init__.py  apps.py  celery.py  checks.py  db_router.py  hijack_urls.py  middleware.py  urls.py
booking-platform/django-root/eway/: __init__.py  response_codes.py
booking-platform/doc/: manual-tests.md
booking-platform/frontend/: sentry.properties  webpack.devserver.js
booking-platform/requirements/: freeze.sh
(+759 files in other folders)
