[tool.black]
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | venv
    | dist
    | node_modules
    | src
  )
)
'''

# ===================================================================================================================
[tool.poetry]
name = "booking-platform"
version = "1"
description = "Booking Platform"
authors = [ "Alliance Software <support@alliancesoftware.com.au>" ]

# ===================================================================================================================
[tool.poetry.dev-dependencies]
